# SimpleWaylandClient

./: .gitignore  CMakeLists.txt  README.md
src/: events.h  init.c  init.h  input.h  keycodes.h  main.c  posix_poll.c  utility.h  wayland.h  wlClient.c  wlClient.h  wlClientState.h
src/glad/: glad.c  glad.h
src/input/: events.h  listeners.h  registerer.h
src/input/callbacks/: keyboard.h  mouse.h  touch.h
src/internals/: internal_api.c  internal_api.h
src/internals/callbacks/: frame-done.c  frame-done.h  input-device.h  registry.h
src/internals/callbacks/input-events/: keyboard.h  mouse.h  relative-pointer.h  touch.h
src/internals/callbacks/xdg-events/: surface.h  toplevel.h  wmbase.h
src/internals/listeners/: input-devices.h  input-events.h  registry.h
src/internals/listeners/xdg-events/: surface.h  toplevel.h  wmbase.h
src/timer/: posix_time.c  timer_api.h
